--- a/BusinessLayer/ApplicationCore.csproj
+++ b/BusinessLayer/ApplicationCore.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
